v1.2.1 fix map page overlapping in half window

--- a/src/App.css
+++ b/src/App.css
@@ -302,7 +302,7 @@ h1 {
   margin: 0 auto;
   position: relative;
   text-align: center;
-  margin-top: 5em;
+  margin-top: 7em;
 }
 .back-button {
   position: fixed; /* Changed from absolute to fixed */
